creating link to get to the wishlist page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
             <li><a href="/cart">Shoping Cart</a></li>
             <li><a href="/user/login">Login</a></li>
             <li><a href="/user/register">Register</a></li>
+            <li><a href="/wishlist">Wishlist</a></li>
         </ul>
     </nav>
 </header>
