Added code to books.js which gets all books from the DB. Added code in index.ejs as an attempt to display all books.

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,1 +1,12 @@
 all books
+
+<!-- views/book/index.ejs -->
+
+
+<h2>Loop</h2>
+
+<ul>
+    <% bookMap.forEach(function(book) { %>
+        <li><%= book.title %> - <%= book.author %></li>
+    <% }); %>
+</ul>
