Fixed code in books.js which grabs books query and reders it. Fixed books/index.ejs which can now output book database.

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -9,4 +9,7 @@ all books
     <% bookMap.forEach(function(book) { %>
         <li><%= book.title %> - <%= book.author %></li>
     <% }); %>
+
+    <!-- <li><%= bookMap.length %></li> -->
+
 </ul>
