small changes to book.js and books/index.ejs

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,15 +1,12 @@
-all books
-
 <!-- views/book/index.ejs -->
 
 
-<h2>Loop</h2>
+<h2>All Books</h2>
 
 <ul>
     <% bookMap.forEach(function(book) { %>
-        <li><%= book.title %> - <%= book.author %></li>
+        <li><%= book.title %>  <%= book.author %></li>
     <% }); %>
 
     <!-- <li><%= bookMap.length %></li> -->
-
 </ul>
