main page fixed

--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,2 +1,8 @@
-<label>Name</label>
-<input type="text" name="name" value="<%= author.name %>">
+<div>
+    <label>Name</label>
+    <input type="text" name="name" value="<%= author.name %>">
+</div>
+<div>
+    <label>Bio</label>
+    <textarea name="bio"><%= author.bio %></textarea>
+</div>
