--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,12 +1,35 @@
-<label>Title</label>
-<input type="text" name="title" value="<%= book.title %>">
-<label>Author</label>
-<input type="text" name="author" value="<%= book.author %>">
-<label>Title</label>
-<input type="text" name="title" value="<%= book.title %>">
-<label>Title</label>
-<input type="text" name="title" value="<%= book.title %>">
-<label>Title</label>
-<input type="text" name="title" value="<%= book.title %>">
-<label>Title</label>
-<input type="text" name="title" value="<%= book.title %>">
+<div>
+    <label>Title</label>
+    <input type="text" name="title" value="<%= book.title %>">
+</div>
+<div>
+    <label>Author</label>
+    <select name="author">
+    <% authors.forEach(author => { %>
+        <% if (author.id === book.author) { %>
+            <option selected label="<%= author.name %>" value="<%= author.id %>"></option>
+        <% } else { %>
+            <option selected label="<%= author.name %>" value="<%= author.id %>"></option>
+        <% } %> 
+    <% }) %>
+    </select>
+</div>
+<div>
+    <label>Publisher</label>
+    <input type="text" name="publisher" value="<%= book.publisher %>">
+</div>
+<div>
+    <label>Publish Date</label>
+    <input type="date" name="publishDate"
+    value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+</div>
+</div>
+<div>
+    <label>Cover</label>
+    <input type="file" name="cover" class="filepond">
+</div>
+<div>    
+    <label>Description</label>
+    <textarea name="description"><%= book.description %></textarea>
+</div>
+
