--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-Middle
+<h2>All Books</h2>
+<div>
+    <% books.forEach(function(book) { %>
+        <img height="150" width="100" src="<%= book.coverImagePath %>">
+    <% }); %>
+</div>
