--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <a href="/">BookStore</a>
         <ul>
             <li><a href="/books">Books</a></li>
-            <li><a href="/cart">Shoping Cart</a></li>
+            <li><a href="/cart">Shopping Cart</a></li>
             <li><a href="/user/login">Login</a></li>
             <li><a href="/user/register">Register</a></li>
             <li><a href="/wishlist">Wishlist</a></li>
