added genre to book table

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -18,7 +18,7 @@
                 <tr>
                     <td><img height="150" width="100" src="<%= book.coverImagePath %>"></td>
                     <td><a href="/books/<%= book._id %>"><%= book.title %></a></td>
-                    <td>Null</td>
+                    <td><%= book.genre %></td>
                     <td><% authors.forEach(author => { %>
                         <% if (author.id == book.author){ %>
                         <%= author.name %>
