--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -1,1 +1,8 @@
 <%= book.title %>
+
+<div>
+    <%- 
+    <form action="/" method="POST">
+        <button type="submit">Create</button>
+    </form>
+</div>
