--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -21,6 +21,7 @@
     
     <%- include('../partials/header.ejs') %>
     <%- include('../partials/errorMessage.ejs') %>
+    <%- messages('messages', locals) %>
     <%- body %>
 </body>
 </html>
