--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -1,12 +1,25 @@
 <center><h2><%= book.title %></h2></center>
 
 <div>
-    <div>
-    <center><img height="350" width="300" src="<%= book.coverImagePath %>"></center>
-    </div>
+
+    <body>
+        <center><img id = "currentImg" onmouseover = "largerIm()" onmouseout="normalSize()"  src="<%= book.coverImagePath %>" height="350" width="300" ></center>
+    </body>
+    <script>
+        function largerIm(){
+            document.getElementById("currentImg").height = "800";
+            document.getElementById("currentImg").width = "800";
+        }
+        function normalSize(){
+            document.getElementById("currentImg").height = "350";
+            document.getElementById("currentImg").width = "300";
+        }    
+    </script>
+
 
     <form action="/" method="POST">
         <center><button type="submit">Add to cart</button></center>
-        <button type="submit">Leave Review</button>
+        <%= book.description %>
+        <div><button type="submit">Leave Review</button></div>      
     </form>
 </div>
