--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -29,7 +29,9 @@
         <td><%= book.price %></td>
         <td>Null</td>
         <td>
-          <a href="/wishlist/<%= book._id %>">Add to Wishlist</a>
+          <a href="/wishlist/<%= book._id %>/5da9fbd86c2ebb1128a8eab0"
+            >Add to Wishlist</a
+          >
         </td>
       </tr>
       <% }); %>
