--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -12,6 +12,11 @@
         width="300"
       />
     </center>
+    <center>
+        <b>publisher:</b> <%= book.publisher %>
+        <b>publish date:</b> <%= book.publishDate%>
+        <b>price:</b> <%= book.price %>
+    </center>
   </body>
   <script>
     function largerIm() {
