Fixed wishlist on landing page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
       <li><a href="/cart">Shoping Cart</a></li>
       <li><a href="/user">Login</a></li>
       <li><a href="/user/register">Register</a></li>
-      <li><a href="/wishlist">Wishlist</a></li>
+      <li><a href="/wishlist/list">Wishlist</a></li>
     </ul>
   </nav>
 </header>
