added delete button to wishlist page

--- a/views/wishlist/index.ejs
+++ b/views/wishlist/index.ejs
@@ -2,7 +2,9 @@
 
 <div>
   <% wishes.forEach(wish => { %>
-  <div>Book Id:<%=wish.bookId %></div>
-  <div>User Id: <%=wish.userId %></div>
+  <div>Book Id:<%=wish.bookId %>  
+    <div align = "right"><form action="/" method="POST"> <!--delete button to remove items from wishlist-->
+    <button type="submit">Delete</button></div>
+  <!--<div>User Id: <%=wish.userId %></div>-->
   <% }); %>
 </div>
