--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <h2>All Books</h2>
 <div>
     <% books.forEach(function(book) { %>
-        <img height="150" width="100" src="<%= book.coverImagePath %>">
+        <a href="/books/<%= book.id%>">
+            <img height="150" width="100" src="<%= book.coverImagePath %>">
+        </a>
     <% }); %>
 </div>
