--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/96bd942da5.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='/stylesheet/style.css'/>
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
     <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
@@ -21,7 +22,6 @@
     
     <%- include('../partials/header.ejs') %>
     <%- include('../partials/errorMessage.ejs') %>
-    <%- messages('messages', locals) %>
     <%- body %>
 </body>
 </html>
