--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,41 @@
-<header>
-  <nav>
-    <a href="/">BookStore</a>
-    <ul>
-      <li><a href="/books">Books</a></li>
-      <li><a href="/cart">Shoping Cart</a></li>
-      <li><a href="/user">Login</a></li>
-      <li><a href="/user/register">Register</a></li>
-      <li><a href="/wishlist">Wishlist</a></li>
-    </ul>
-  </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Bookstore</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/books">Books <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/wishlist">WishList <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i>Shopping Cart <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-user"></i>User Management 
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <%if (login) { %>
+                            <a class="dropdown-item" href="/user/profile">User Account</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/user/logout">Logout</a>
+                        <% } %>
+                        <% if (!login) { %> 
+                            <a class="dropdown-item" href="/user/signup">Sign Up</a>
+                            <a class="dropdown-item" href="/user/signin">Sign In</a>
+                        <% } %>
+                        
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
