fixed issue with the session

--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -29,7 +29,7 @@
     }
   </script>
 
-  <form action="/" method="POST">
+  <form action="/add-to-cart/<%= this.id %>" method="POST">
     <center><button type="submit">Add to cart</button></center>
     <%= book.description %>
     <div><button type="submit">Leave Review</button></div>
