--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -50,7 +50,7 @@
   </table>
 </div> -->
 
-<div class ="dropdown">
+<!--<div class ="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Filter by
   </button>
@@ -59,7 +59,23 @@
     <a class="dropdown-item" href="#"> Romance</a>
     <a class="dropdown-item" href="#"> Horror</a>
   </div>
+</div>-->
+</head>
+<body>
+
+<div class="dropdown">
+    <button onclick = "myFunction()" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+        Filter by
+      </button>
+  <div class="dropdown-content">
+    <a href="#">Fiction</a>
+    <a href="#">Romance</a>
+    <a href="#">Horror</a>
+  </div>
 </div>
+
+</body>
+</html>
 
 <div class ="w-25 p-3">
   <ul class ="list-group list-group-horizontal">
@@ -91,3 +107,46 @@
     <% }); %>
   </ul>
 </div>
+
+
+<!--CSS styling for dropdown menu-->
+<!DOCTYPE html>
+<html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:click {background-color: rgb(221, 221, 221);}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+</style>
