--- a/views/wishlist/list.ejs
+++ b/views/wishlist/list.ejs
@@ -1,9 +1,47 @@
-<h2>Wishlist</h2>
+<h2 class="title">Wishlist</h2>
 
-<div>
+<style>
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 70%;
+    margin-top: 40px;
+    margin-left: 15px;
+  }
+
+  td,
+  th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  .title {
+    margin-left: 15px;
+  }
+  .center {
+    text-align: center;
+  }
+</style>
+
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Genre</th>
+    <th></th>
+    <th></th>    
+  </tr>
+
   <% wishes.forEach(wish => { %>
-  <div>Book Id:<%=wish.bookId %>  
-    <div align = "right"><form action="/" method="POST"> <!--delete button to remove items from wishlist-->
-    <button type="submit">Delete</button></div>
+  <tr>
+    <td><%= wish.newWishList[0].title %></td>
+    <td><%= wish.newWishList[0].genre %></td>
+    <td class="center"><a href="#">Remove</a></td>
+    <td class="center"><a href="#">Add to Cart</a></td>    
+  </tr>
   <% }); %>
-</div>
+
+</table>
