--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -69,7 +69,7 @@
       </button>
   <div class="dropdown-content">
     <a href="#">Fiction</a>
-    <a href="#">Romance</a>
+    <a href="/books/Romance">Romance</a>
     <a href="#">Horror</a>
   </div>
 </div>
