fix issue with book detail

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -68,9 +68,9 @@
         Filter by
       </button>
   <div class="dropdown-content">
-    <a href="#">Fiction</a>
-    <a href="/books/Romance">Romance</a>
-    <a href="#">Horror</a>
+    <a href="/books/show-books/Fantasy">Fantasy</a>
+    <a href="/books/show-books/Romance">Romance</a>
+    <a href="/books/show-books/Horror">Horror</a>
   </div>
 </div>
 
