--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -22,6 +22,8 @@
     
     <%- include('../partials/header.ejs') %>
     <%- include('../partials/errorMessage.ejs') %>
-    <%- body %>
+    <div class="constainer">
+        <%- body %>
+    </div>
 </body>
 </html>
