--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,9 +29,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/cart"
+        <a class="nav-link" href="/shopping-cart/"
           ><i class="fas fa-shopping-cart"></i>Shopping Cart
-          <span class="sr-only">(current)</span></a
+          <span class="badge"></span></a
         >
       </li>
       <li class="nav-item dropdown active">
