--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -1,4 +1,4 @@
-<center><h2><%= book.title %></h2></center>
+<!--<center><h2><%= book.title %></h2></center>
 
 <div>
   <body>
@@ -29,9 +29,25 @@
     }
   </script>
 
-  <form action="/add-to-cart/<%= this.id %>" method="POST">
+  <form action="/add-to-cart/<%= book.id %>" method="POST">
     <center><button type="submit">Add to cart</button></center>
     <%= book.description %>
     <div><button type="submit">Leave Review</button></div>
   </form>
+</div>
+-->
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src=<%= book.coverImagePath %> alt="..." class="img-responsive">
+      <div class="caption">
+        <h3><%= book.title %></h3>
+        <h2><%= book.author %></h2>
+          <p class="description"><%= book.description %></p>
+          <div class="clearfix">
+            <div class="price pull-left"><%= book.price %></div>
+              <a href="/add-to-cart/<%=book._id%>" class="btn btn-success pull-right" role="button">Button</a>
+          </div>
+      </div>
+  </div>
 </div>
