--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="/shopping-cart/"
           ><i class="fas fa-shopping-cart"></i>Shopping Cart
-          <span class="badge"></span></a
+          <span class="badge"><%= session.cart.totalQty%></span></a
         >
       </li>
       <li class="nav-item dropdown active">
