--- a/views/cart/shopping-cart.ejs
+++ b/views/cart/shopping-cart.ejs
@@ -11,7 +11,7 @@
                                 Action
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Reduce by 1</a></li>
+                                <li><a class="dropdown-item" href="/reduce/<%= book.item._id%>">Reduce by 1</a></li>
                                 <li><a class="dropdown-item" href="#">Remove All</a></li> 
                             </ul>
                         </div>
