--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,8 +30,8 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/shopping-cart/"
-          ><i class="fas fa-shopping-cart"></i>Shopping Cart
-          <span class="badge"><%= session.cart.totalQty%></span></a
+          ><i class="fas fa-shopping-cart" aria-hidden="true"></i>Shopping Cart
+          <span class="badge"></span></a
         >
       </li>
       <li class="nav-item dropdown active">
