--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -71,11 +71,14 @@
     <a href="/books/show-books/Fantasy">Fantasy</a>
     <a href="/books/show-books/Romance">Romance</a>
     <a href="/books/show-books/Horror">Horror</a>
+    <a href="/books/show-books/1"><span>&#x2605;</span></a>
+    <a href="/books/show-books/2"><span>&#x2605;&#x2605;</span></a>
+    <a href="/books/show-books/3"><span>&#x2605;&#x2605;&#x2605;</span></a>
+    <a href="/books/show-books/4"><span>&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+    <a href="/books/show-books/5"><span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
   </div>
 </div>
-
 </body>
-</html>
 
 <div class ="w-25 p-3">
   <ul class ="list-group list-group-horizontal">
@@ -94,7 +97,17 @@
           <%= author.name %> <% } }) %>
       </div>
       <div class ="text-center">
-        Null
+        <% if(book.rating === 1){ %>
+          <span>&#x2605;</span>
+        <% }if(book.rating === 2){ %>
+          <span>&#x2605;&#x2605;</span>
+        <% }if(book.rating === 3){ %>
+          <span>&#x2605;&#x2605;&#x2605;</span>
+        <% }if(book.rating === 4){ %>
+          <span>&#x2605;&#x2605;&#x2605;&#x2605;</span>
+        <% }if(book.rating === 5){ %>
+          <span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span>
+        <% } %>
       </div>
       <div class ="text-center">
         <%= book.price %>
