Added pagination. Contains some pagination errors

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -68,14 +68,14 @@
         Filter by
       </button>
   <div class="dropdown-content">
-    <a href="/books/show-books/Fantasy">Fantasy</a>
-    <a href="/books/show-books/Romance">Romance</a>
-    <a href="/books/show-books/Horror">Horror</a>
-    <a href="/books/show-books/1"><span>&#x2605;</span></a>
-    <a href="/books/show-books/2"><span>&#x2605;&#x2605;</span></a>
-    <a href="/books/show-books/3"><span>&#x2605;&#x2605;&#x2605;</span></a>
-    <a href="/books/show-books/4"><span>&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
-    <a href="/books/show-books/5"><span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+    <a href="/books/show-books/Fantasy/">Fantasy</a>
+    <a href="/books/show-books/Romance/">Romance</a>
+    <a href="/books/show-books/Horror/">Horror</a>
+    <a href="/books/show-books/1star/"><span>&#x2605;</span></a>
+    <a href="/books/show-books/2star/"><span>&#x2605;&#x2605;</span></a>
+    <a href="/books/show-books/3star/"><span>&#x2605;&#x2605;&#x2605;</span></a>
+    <a href="/books/show-books/4star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+    <a href="/books/show-books/5star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
   </div>
 </div>
 </body>
@@ -122,6 +122,13 @@
 </div>
 
 
+<div class="text-center">
+  <ul class="pagination">
+    <li><a href="1">1</a></li>
+    <li><a href="2">2</a></li>
+  </ul>
+</div>
+
 <!--CSS styling for dropdown menu-->
 <!DOCTYPE html>
 <html>
@@ -162,4 +169,5 @@
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
 </style>
