--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -103,57 +103,180 @@
   color: #000;
   text-shadow: 0 0 5px orange;
 }
+.book-desc {
+  display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.comment-wrapper .panel-body {
+    max-height:650px;
+    overflow:auto;
+}
+
+.comment-wrapper .media-list .media img {
+    width:64px;
+    height:64px;
+    border:2px solid #e5e7e8;
+}
+
+.comment-wrapper .media-list .media {
+    border-bottom:1px dashed #efefef;
+    margin-bottom:25px;
+}
+.comments {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.description {
+  font-size: 18px;
+}
   </style>
-  <script>
-    let stars = document.getElementsByName('stars')
-    stars.map(star => )
-  </script>
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src=<%= book.coverImagePath %> alt="..." class="img-responsive">
-      <div class="caption">
-        <h3><%= book.title %></h3>
-        <h2><%= book.author %></h2>
-          <p class="description"><%= book.description %></p>
-          <div class="clearfix">
-            <div class="price pull-left"><%= book.price %></div>
-            <div class="pull-right">
-                <form id="rating-form" method="post" class="rating" action="/books/rate/<%=book.id%>">
-                    <label>
-                        <input type="radio" name="stars" value="1" <% if(book.rating === 1){ %> checked="checked" <% } %> />
-                        <span class="icon">★</span>
-                    </label>
-                    <label>
-                      <input type="radio" name="stars" value="2" <% if(book.rating === 2){ %> checked="checked" <% } %>/>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                    </label>
-                    <label>
-                      <input type="radio" name="stars" value="3" <% if(book.rating === 3){ %> checked="checked" <% } %>/>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>   
-                    </label>
-                    <label>
-                      <input type="radio" name="stars" value="4" <% if(book.rating === 4){ %> checked="checked" <% } %>/>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                    </label>
-                    <label>
-                      <input type="radio" name="stars" value="5" <% if(book.rating === 5){ %> checked="checked" <% } %>/>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                      <span class="icon">★</span>
-                    </label>
-                  </form>
-                <button type="submit" form="rating-form" class="btn btn-warning"><i class="fa fa-check"></i></button>
-              <a href="/add-to-cart/<%=book._id%>" class="btn btn-success" role="button">Button</a>
-            </div>
+  <div class="container">
+      <div class="row">
+          <div class="col-md-3 offset-md-1 col-sm-12">
+              <img src=<%= book.coverImagePath %> alt="..." class="img-responsive">
+          </div>
+          <div class="col-md-7 col-sm-12 book-desc">
+              <h2><%= book.title %></h2>
+                  <h3><%= book.author %></h3>
+                    <p class="description"><%= book.description %></p>
+                    <div class="clearfix">
+                      <div class="price pull-left"><%= book.price %></div>
+                      <div class="pull-right">
+                          <form id="rating-form" method="post" class="rating" action="/books/rate/<%=book.id%>">
+                              <label>
+                                  <input type="radio" name="stars" value="1" <% if(book.rating === 1){ %> checked="checked" <% } %> />
+                                  <span class="icon">★</span>
+                              </label>
+                              <label>
+                                <input type="radio" name="stars" value="2" <% if(book.rating === 2){ %> checked="checked" <% } %>/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                              </label>
+                              <label>
+                                <input type="radio" name="stars" value="3" <% if(book.rating === 3){ %> checked="checked" <% } %>/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>   
+                              </label>
+                              <label>
+                                <input type="radio" name="stars" value="4" <% if(book.rating === 4){ %> checked="checked" <% } %>/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                              </label>
+                              <label>
+                                <input type="radio" name="stars" value="5" <% if(book.rating === 5){ %> checked="checked" <% } %>/>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                              </label>
+                            </form>
+                          <button type="submit" form="rating-form" class="btn btn-warning"><i class="fa fa-check"></i></button>
+                        <a href="/add-to-cart/<%=book._id%>" class="btn btn-info" role="button">Add to Cart</a>
+                      </div>
+                    </div>
           </div>
       </div>
+
+      <div class="row comments"">
+        <div class="col offset-md-1">
+          <h3 class="mx-auto">Comments</h3>
+        </div>
+        </div>
+        <div class="row bootstrap snippets">
+            <div class="col-md-8 offset-md-1 col-sm-12">
+                <div class="comment-wrapper">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            Comment panel
+                        </div>
+                        <div class="panel-body">
+                          <form action="/books/comment/<%=book.id%>" method="post">
+                              <textarea name="comment" class="form-control" placeholder="write a comment..." rows="3"></textarea>
+                              <br>
+                              <button type="submit" class="btn btn-info pull-right">Post</button>
+                          </form>
+                            <div class="clearfix"></div>
+                            <hr>
+                            <ul class="media-list">
+
+
+
+                                <% comments.forEach(function(comment) { %>
+                                  <li class="media">
+                                      <a href="#" class="pull-left">
+                                          <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
+                                      </a>
+                                      <div class="media-body">
+                                          <span class="text-muted pull-right">
+                                              <small class="text-muted"><%= timeDiff(+new Date, comment.createdAt) %></small>
+                                          </span>
+                                          <strong class="text-success">@anonymous</strong>
+                                          <p>
+                                              <%= comment.content %>
+                                          </p>
+                                      </div>
+                                  </li>
+                                  <% }); %>
+
+
+                                <li class="media">
+                                    <a href="#" class="pull-left">
+                                        <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
+                                    </a>
+                                    <div class="media-body">
+                                        <span class="text-muted pull-right">
+                                            <small class="text-muted">30 minutes ago</small>
+                                        </span>
+                                        <strong class="text-success">@MartinoMont</strong>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            Lorem ipsum dolor sit amet, <a href="#">#consecteturadipiscing </a>.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="media">
+                                    <a href="#" class="pull-left">
+                                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
+                                    </a>
+                                    <div class="media-body">
+                                        <span class="text-muted pull-right">
+                                            <small class="text-muted">30 minutes ago</small>
+                                        </span>
+                                        <strong class="text-success">@LaurenceCorreil</strong>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            Lorem ipsum dolor <a href="#">#ipsumdolor </a>adipiscing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="media">
+                                    <a href="#" class="pull-left">
+                                        <img src="https://bootdey.com/img/Content/user_3.jpg" alt="" class="img-circle">
+                                    </a>
+                                    <div class="media-body">
+                                        <span class="text-muted pull-right">
+                                            <small class="text-muted">30 minutes ago</small>
+                                        </span>
+                                        <strong class="text-success">@JohnNida</strong>
+                                        <p>
+                                            Lorem ipsum dolor <a href="#">#sitamet</a> sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+        
+            </div>
+        </div>
+      
   </div>
 </div>
