--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -115,10 +115,10 @@
       <div class ="text-center">
         <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/1"
             >Add to Wishlist</a>
-            <!--  <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/2"
+             <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/2"
             >Add to Wishlist 2</a>
              <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/3"
-            >Add to Wishlist 3</a> -->
+            >Add to Wishlist 3</a> 
       </div>
     </li>
     <% }); %>
