--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -132,11 +132,15 @@
 .description {
   font-size: 18px;
 }
+
+.enlargeable:hover,.enlargeable:focus {
+  transform: scale(1.5);
+}
   </style>
   <div class="container">
       <div class="row">
           <div class="col-md-3 offset-md-1 col-sm-12">
-              <img src=<%= book.coverImagePath %> alt="..." class="img-responsive">
+              <img src=<%= book.coverImagePath %> alt="..." class="img-responsive enlargeable">
           </div>
           <div class="col-md-7 col-sm-12 book-desc">
               <h2><%= book.title %></h2>
