--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -8,12 +8,24 @@
     <% } %>
     <form action="/user/signup" method="post">
       <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" class="form-control" value="<%= user.name %>">
+      </div>
+      <div class="form-group">
         <label for="email">E-Mail</label>
         <input type="text" id="email" name="email" class="form-control">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
         <input type='password' id="password" name="password" class="form-control">
+      </div>
+      <div class="form-group">
+          <label for="name">Address</label>
+          <input type="text" id="address" name="address" class="form-control" value="<%= user.address %>">
+      </div>
+      <div class="form-group">
+          <label for="name">Credit Card</label>
+          <input type="text" id="creditcard" name="creditcard" class="form-control" value="<%= user.creditcard %>">
       </div>
       <input type="hidden" name="_csrf" value="<%=csrfToken%>">
       <button type="submit" class="btn btn-primary">Sign Up</button> 
