Added filter for unrated books

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -71,6 +71,7 @@
     <a href="/books/show-books/Fantasy/">Fantasy</a>
     <a href="/books/show-books/Romance/">Romance</a>
     <a href="/books/show-books/Horror/">Horror</a>
+    <a href="/books/show-books/0star/">Unrated</a>
     <a href="/books/show-books/1star/"><span>&#x2605;</span></a>
     <a href="/books/show-books/2star/"><span>&#x2605;&#x2605;</span></a>
     <a href="/books/show-books/3star/"><span>&#x2605;&#x2605;&#x2605;</span></a>
@@ -114,9 +115,9 @@
       </div>
       <div class ="text-center">
         <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/1"
-            >Add to Wishlist</a>
+            >Add to Wishlist</a><br>
              <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/2"
-            >Add to Wishlist 2</a>
+            >Add to Wishlist 2</a><br>
              <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/3"
             >Add to Wishlist 3</a> 
       </div>
