--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -181,7 +181,11 @@
                                 <span class="icon">★</span>
                               </label>
                             </form>
-                          <button type="submit" form="rating-form" class="btn btn-warning"><i class="fa fa-check"></i></button>
+                            <% if(userID === -1) { %>
+                              <button type="submit" form="rating-form" class="btn btn-warning" disabled><i class="fa fa-check"></i></button>
+                            <% } else { %>
+                              <button type="submit" form="rating-form" class="btn btn-warning"><i class="fa fa-check"></i></button>
+                            <% } %>
                         <a href="/add-to-cart/<%=book._id%>" class="btn btn-info" role="button">Add to Cart</a>
                       </div>
                     </div>
@@ -210,7 +214,11 @@
                               </div>
                               <br>
                               <br>
-                              <button type="submit" class="btn btn-info pull-right">Post</button>
+                              <% if(userID === -1) { %>
+                                <button type="submit"  class="btn btn-info pull-right" disabled>Post</button>
+                              <% } else { %>
+                                <button type="submit"  class="btn btn-info pull-right">Post</button>
+                              <% } %>
                           </form>
                             <div class="clearfix"></div>
                             <hr>
